--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -154,7 +154,7 @@
 
 	.navigation
 	{
-		right: 195px;
+		right: 220px;
 	}
 
 	.navigation li
@@ -310,7 +310,7 @@
 
 	.navigation
 	{
-		right: 200px;
+		right: 220px;
 	}
 
 	.navigation li
